; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath9k/extr_ani.c_ath9k_hw_ani_ofdm_err_trigger.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath9k/extr_ani.c_ath9k_hw_ani_ofdm_err_trigger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hw = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.ar5416AniState }
%struct.ar5416AniState = type { i64 }

@ATH9K_ANI_OFDM_MAX_LEVEL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ath_hw*)* @ath9k_hw_ani_ofdm_err_trigger to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ath9k_hw_ani_ofdm_err_trigger(%struct.ath_hw* %0) #0 {
  %2 = alloca %struct.ath_hw*, align 8
  %3 = alloca %struct.ar5416AniState*, align 8
  store %struct.ath_hw* %0, %struct.ath_hw** %2, align 8
  %4 = load %struct.ath_hw*, %struct.ath_hw** %2, align 8
  %5 = call i32 @DO_ANI(%struct.ath_hw* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %25

8:                                                ; preds = %1
  %9 = load %struct.ath_hw*, %struct.ath_hw** %2, align 8
  %10 = getelementptr inbounds %struct.ath_hw, %struct.ath_hw* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store %struct.ar5416AniState* %12, %struct.ar5416AniState** %3, align 8
  %13 = load %struct.ar5416AniState*, %struct.ar5416AniState** %3, align 8
  %14 = getelementptr inbounds %struct.ar5416AniState, %struct.ar5416AniState* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @ATH9K_ANI_OFDM_MAX_LEVEL, align 8
  %17 = icmp slt i64 %15, %16
  br i1 %17, label %18, label %25

18:                                               ; preds = %8
  %19 = load %struct.ath_hw*, %struct.ath_hw** %2, align 8
  %20 = load %struct.ar5416AniState*, %struct.ar5416AniState** %3, align 8
  %21 = getelementptr inbounds %struct.ar5416AniState, %struct.ar5416AniState* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = add nsw i64 %22, 1
  %24 = call i32 @ath9k_hw_set_ofdm_nil(%struct.ath_hw* %19, i64 %23, i32 0)
  br label %25

25:                                               ; preds = %7, %18, %8
  ret void
}

declare dso_local i32 @DO_ANI(%struct.ath_hw*) #1

declare dso_local i32 @ath9k_hw_set_ofdm_nil(%struct.ath_hw*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
